# public-chpqa

./: .env  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: back_end.md  data_manager.md  explanation.md  faq.md  front_end.md  how-to-guides.md  index.md  reference.md  report.md  source.md  streamlit_obj.md  utils.md
notebooks/: example_chp_data.csv  working_notebook.ipynb
site/: 404.html  Makefile  conf.py  index.html  index.rst  make.bat  objects.inv
site/back_end/: index.html
site/data_manager/: index.html
site/explanation/: index.html
site/faq/: index.html
site/front_end/: index.html
site/how-to-guides/: index.html
site/import_data/: index.html
site/reference/: index.html
site/report/: index.html
site/source/: index.html
site/streamlit_obj/: index.html
site/utils/: index.html
src/backend/: config.py  fast_api_app.py  verification.py
src/common/: enums.py
src/data/: import_data.py  metering.py  schema.py  source.py  x_y_coeff_vals - Sheet1.csv
src/frontend/: streamlit_app.py  streamlit_content.py  streamlit_objs.py  utils.py
src/frontend/example data/: chp_data_april.csv  chp_data_august.csv  chp_data_december.csv  chp_data_february.csv  chp_data_january.csv  chp_data_july.csv  chp_data_june.csv  chp_data_march.csv  chp_data_may.csv  chp_data_november.csv  chp_data_october.csv  chp_data_september.csv
src/models/: report.py  technology.py
